force-app/main/default/objects/Campaign_Performance__c/Campaign_Performance__c.object-meta.xml
<CustomObject>
    <description>Campaign-level performance tracking for marketing operations.</description>
    <label>Campaign Performance</label>
    <nameField>
        <label>Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Performances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>