force-app/main/default/objects/Campaign_Performance__c/fields/Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Conversion Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>