force-app/main/default/objects/Campaign_Performance__c/fields/Orders_Count__c.field-meta.xml
<CustomField>
    <fullName>Orders_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Orders Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>