force-app/main/default/objects/Campaign_Performance__c/fields/Revenue_Generated__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Generated__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Revenue Generated</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>